Fix SideMenu: use !important to override inline-block on collapsed items
The Tooltip component adds inline-block class which was overriding the
hidden utility. Use display: none !important to ensure collapsed items
are properly hidden when menu is in expanded mode.

--- a/app/components/bali/side_menu/index.css
+++ b/app/components/bali/side_menu/index.css
@@ -190,7 +190,7 @@
 
   &:not(.is-collapsed) {
     .side-menu-component--item-component.is-collapsed {
-      @apply hidden;
+      display: none !important;
     }
 
     .side-menu-component--item-component.is-expanded {
